Testing fix for overflow issue

--- a/bones.css
+++ b/bones.css
@@ -16,7 +16,7 @@
     padding             : 0;
 }
 
-body, html {
+body {
     height              : 100%;
     min-height          : 100%;
 }
